---
source: test/src/lib.rs
expression: snapshot
---
tests/operator-without-parentheses.test.wipple:3:1: error: cannot add unit and a number
tests/operator-without-parentheses.test.wipple:3:1: note: `show 1` is unit
tests/operator-without-parentheses.test.wipple:3:10: note: `2` is a number
tests/operator-without-parentheses.test.wipple:4:1: error: `show True or False` requires `(Or Unit Boolean _)`
tests/operator-without-parentheses.test.wipple:5:6: error: cannot add a number and a piece of text
tests/operator-without-parentheses.test.wipple:5:7: note: `1` is a number
tests/operator-without-parentheses.test.wipple:5:11: note: `"hi"` is a piece of text
